Refactored.Formatted. checkstyle errors